--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -49,6 +49,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <a href="#section7"><b>Continuous Education</b></a>    <a>  |  </a> 
       <a href="#section8"><b>Participation in Conferences</b></a>    <a>  |  </a> 
       <a href="#section9"><b>Peer-reviewing</b></a>    <a>   |  </a> 
+      <a href="#section9b"><b>Master supervisions</b></a>    <a>   |  </a> 
     </nav>
     <nav style="background:#F2F7FF;"><a>  |  </a>
       <a href="#section10"><b>Active Membership</b></a>    <a>  |  </a> 
@@ -308,6 +309,16 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                    <li><a href="https://www.frontiersin.org/journals/psychiatry" target="_blank">Reviewer for Frontiers in Psychiatry</a></li>
                    <li><a href="https://www.frontiersin.org/journals/behavioral-neuroscience" target="_blank">Reviewer for Frontiers in Behavioral Neuroscience</a></li>
           </ul>
+
+          <section id="section9b"></section>
+          <div class="mb-5"><div class="text-3xl w-full font-bold">Master's Student Supervision</div></div>
+                 <ul class="list-disc mx-6 mb-10 grid gap-2">
+                          <li><a >Marzia Campanile <i>(role as "co-supervisor")</i>. <b>Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice </b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
+                          <li><a >Virginia Delli <i>(role as "co-supervisor")</i>. <b> Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition</b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
+                          <li><a >Eva Luz Lachat <i>(role as "expert")</i>. <b> Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature</b> (2023). University of Lausanne, Switzerland </a> </li>
+                          <li><a >Anna Dreier <i>(role as "expert")</i>. <b>  Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption </b> (2023). University of Lausanne, Switzerland </a> </li>
+                        </ul>
+       
 
               <section id="section10"></section>
      <div class="mb-5"> <div class="text-3xl w-full font-bold">Active Membership</div></div>
