--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -118,8 +118,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
  <p align="justify">
 
-
-
 <a class="text-lg" href=" https://www.letemps.ch/sciences/infertilite-pesticides-mis-cause"> Le Temps,</a>
 <a class="text-lg" href=" https://www.lavanguardia.com/vida/20190520/462341188690/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> La Vanguardia,</a>
 <a class="text-lg" href=" https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/"> Daily science,</a>
@@ -152,6 +150,16 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 <a class="text-lg" href=" http//z101digital.com/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> Digital,</a>
 <a class="text-lg" href=" https//www.telemundo.com/node/3252932"> Telemundo</a>
 </p>
+
+<div class="text-2xl w-full font-bold mb-0 mt-10">Master's Student Supervision   </div>
+
+      <ul class="list-disc mx-6 mb-10 grid gap-2">
+                          <li><a >Marzia Campanile <i>(role as "co-supervisor")</i>. <b>Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice </b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
+                          <li><a >Virginia Delli <i>(role as "co-supervisor")</i>. <b> Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition</b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
+                          <li><a >Eva Luz Lachat <i>(role as "expert")</i>. <b> Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature</b> (2023). University of Lausanne, Switzerland </a> </li>
+                          <li><a >Anna Dreier <i>(role as "expert")</i>. <b>  Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption </b> (2023). University of Lausanne, Switzerland </a> </li>
+                        </ul>
+       
 
 
 </BaseLayout>
