--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -25,35 +25,46 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 <BaseLayout title = "Publications - David Lopez Rodriguez">
 
-  <div style="text-align:center">
-    <nav style="background:#F2F7FF;">
-    <a>  |  </a> 
-      <a href="#section1" class="mb-5 text-justify"><b>PhD thesis</b></a> <a>  |  </a> 
-      <a href="#section2"><b>Manuscripts in preparation</b></a>    <a>  |  </a> 
-      <a href="#section3"><b>Peer-reviewed scientific articles</b></a>    <a>  |  </a> 
-      <a href="#section4"><b>Non-peer reviewed articles</b></a>    <a>  |  </a> 
-    </nav>
-    <nav style="background:#F2F7FF;"><a>  |  </a>
-      <a href="#section5"><b>Press releases</b></a>    <a>  |  </a> 
-      <a href="#section6"><b>Articles in the general press</b></a>    <a>  |  </a> 
-      <a href="#section7"><b>Master's Student Supervision</b></a>    <a>  |  </a> 
-    </nav>
+    <div style="text-align:center">
+      <nav style="background:#F2F7FF;">
+      <a>  |  </a> 
+        <a href="#section1" class="mb-5 text-justify"><b>PhD thesis</b></a> <a>  |  </a> 
+        <a href="#section2"><b>Manuscripts in preparation</b></a>    <a>  |  </a> 
+        <a href="#section3"><b>Peer-reviewed scientific articles</b></a>    <a>  |  </a> 
+        <a href="#section4"><b>Non-peer reviewed articles</b></a>    <a>  |  </a> 
+      </nav>
+      <nav style="background:#F2F7FF;"><a>  |  </a>
+        <a href="#section5"><b>Press releases</b></a>    <a>  |  </a> 
+        <a href="#section6"><b>Articles in the general press</b></a>    <a>  |  </a> 
+        <a href="#section7"><b>Master's Student Supervision</b></a>    <a>  |  </a> 
+      </nav>
 
-</div>
-    <div style="line-height:60%;"> <br></div>
-    <hr> 
-    <div style="line-height:160%;"> <br></div>
+  </div>
+      <div style="line-height:60%;"> <br></div>
+      <hr> 
+      <div style="line-height:160%;"> <br></div>
 
 
 
     <section id="section1"></section>
-  <div> <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> </div>
   
-  <div class="divider my-0"></div><p align="justify">
-  <a href="https://explore.lib.uliege.be/permalink/32ULG_INST/1iujq0/alma9921156576402321" target="_blank">
- <text class="text-lg"> <u>Lopez-Rodriguez D</u>. <i>Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation.</i> GIGA-Neurosciences. University of Liège. Advisor: Prof. Anne-Simone Parent. </text>
- </p></a>
- <a href="https://drive.google.com/file/d/1krHdJQaA7Nar19DszodyQN1ibO5Vkfa7/view?usp=share_link" target="_blank"><text class="text-lg"> <b>Download</b> </text></p></a>
+  
+    <div> <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> </div>
+  
+      <div class="divider my-0"></div>
+          <p align="justify">
+            <a href="https://explore.lib.uliege.be/permalink/32ULG_INST/1iujq0/alma9921156576402321" target="_blank">
+              <text class="text-lg"> 
+                <u>Lopez-Rodriguez D</u>. 
+                <i>Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation.</i> 
+                GIGA-Neurosciences. University of Liège. Advisor: Prof. Anne-Simone Parent. </text>
+            </a>
+          </p>
+        <a href="https://drive.google.com/file/d/1krHdJQaA7Nar19DszodyQN1ibO5Vkfa7/view?usp=share_link" target="_blank">
+              <text class="text-lg"> 
+                <b>Download</b> 
+              </text>
+          </a>
 
 
  <section id="section2"></section>
