--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -26,17 +26,19 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 <BaseLayout title = "Publications - David Lopez Rodriguez">
 
     <div style="text-align:center">
+
       <nav style="background:#F2F7FF;">
-      <a>  |  </a> 
-        <a href="#section1" class="mb-5 text-justify"><b>PhD thesis</b></a> <a>  |  </a> 
-        <a href="#section2"><b>Manuscripts in preparation</b></a>    <a>  |  </a> 
-        <a href="#section3"><b>Peer-reviewed scientific articles</b></a>    <a>  |  </a> 
-        <a href="#section4"><b>Non-peer reviewed articles</b></a>    <a>  |  </a> 
+          <a>  |  </a> 
+            <a href="#section1" class="mb-5 text-justify"><b>PhD thesis</b></a> <a>  |  </a> 
+            <a href="#section2"><b>Manuscripts in preparation</b></a>    <a>  |  </a> 
+            <a href="#section3"><b>Peer-reviewed scientific articles</b></a>    <a>  |  </a> 
+            <a href="#section4"><b>Non-peer reviewed articles</b></a>    <a>  |  </a> 
       </nav>
+
       <nav style="background:#F2F7FF;"><a>  |  </a>
-        <a href="#section5"><b>Press releases</b></a>    <a>  |  </a> 
-        <a href="#section6"><b>Articles in the general press</b></a>    <a>  |  </a> 
-        <a href="#section7"><b>Master's Student Supervision</b></a>    <a>  |  </a> 
+            <a href="#section5"><b>Press releases</b></a>    <a>  |  </a> 
+            <a href="#section6"><b>Articles in the general press</b></a>    <a>  |  </a> 
+            <a href="#section7"><b>Master's Student Supervision</b></a>    <a>  |  </a> 
       </nav>
 
   </div>
@@ -47,8 +49,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
     <section id="section1"></section>
-  
-  
     <div> <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> </div>
   
       <div class="divider my-0"></div>
@@ -147,66 +147,63 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 <a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"><i> University of Liege</i></a>
 
-<section id="section6"></section>
-   <div class="text-2xl w-full font-bold mb-0 mt-10">Articles in the general press</div>
-
-   <div class="divider my-0"></div><p align="justify"></p>
 
 
+      <section id="section6"></section>
+          <div class="text-2xl w-full font-bold mb-0 mt-10">Articles in the general press</div>
 
-     <div class="social-icons px-6 my-2 py-2 flex">
-		<a href="https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/" target="_blank" class="mx-3" aria-label="DailyScience" title="DailyScience">
-				<img src="/Press.png" alt="DailyScience" width="1200" height="1000"> </img>
-			</a>
-</div>
+          <div class="divider my-0"></div>
+          
+          <p align="justify"></p>
 
+          <div class="social-icons px-6 my-2 py-2 flex">
+              <a href="https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/" target="_blank" class="mx-3" aria-label="DailyScience" title="DailyScience">
+                <img src="/Press.png" alt="DailyScience" width="1200" height="1000"> </img>
+              </a>
+          </div>
+          <p align="justify">
+                      <a class="text-lg" href=" https://www.letemps.ch/sciences/infertilite-pesticides-mis-cause"> Le Temps,</a>
+                      <a class="text-lg" href=" https://www.lavanguardia.com/vida/20190520/462341188690/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> La Vanguardia,</a>
+                      <a class="text-lg" href=" https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/"> Daily science,</a>
+                      <a class="text-lg" href="https://www.lecho.be/economie-politique/belgique/general/les-polluants-chimiques-perturbent-plusieurs-generations/10128766.html"> L’echo,</a>
+                      <a class="text-lg" href=" https://www.eurekalert.org/news-releases/606628"> AAAS EurekAlert,</a>
+                      <a class="text-lg" href="https://www.yourhormones.info/news/item/13365/max-perutz-science-writing-award-winner-announced"> Yourhormones,</a>
+                      <a class="text-lg" href="https://www.newswise.com/articles/endocrine-disruptors-alter-female-reproduction-throughout-multiple-generations"> Newswise,</a>
+                      <a class="text-lg" href=" https://www.cambialaterra.it/2019/03/interferenti-endocrini-i-danni-si-trasmettono-per-4-generazioni/"> Cambia La Terra,</a>
+                      <a class="text-lg" href=" https://inews.co.uk/news/health/why-exposure-to-everyday-chemicals-could-reduce-your-grandchildrens-fertility-272897"> iNews,</a>
+                      <a class="text-lg" href="https://medicalxpress.com/news/2019-03-endocrine-disruptors-female-reproduction-multiple.html"> MedicalExpress,</a>
+                      <a class="text-lg" href=" https://notiziescientifiche.it/sostanze-tossiche-immesse-nellambiente-danneggiano-sistema-endocrino-e-fertilita/"> Notizie scientifiche,</a>
+                      <a class="text-lg" href="https://www.infosalus.com/salud-investigacion/noticia-contaminacion-pueden-perjudicar-fertilidad-generaciones-futuras-20190520075734.html"> Infosalus,</a>
+                      <a class="text-lg" href=" https://www.business-standard.com/article/pti-stories/environmental-toxins-may-impair-fertility-of-future-generations-study-119052000276_1.html"> Business Standard,</a>
+                      <a class="text-lg" href=" https://fit.thequint.com/health-news/environmental-pollutants-affect-fertility-in-future-generations-study"> Fit the quint,</a>
+                      <a class="text-lg" href=" https://www.sciencemediacentre.org/expert-reaction-to-conference-abstract-unpublished-work-on-environmental-toxins-and-fertility-of-future-generations/"> Science Media Center,</a>
+                      <a class="text-lg" href=" https://afaae.com/africa/how-do-environmental-toxins-affect-sexual-development-and-fertility/"> Afaae,</a>
+                      <a class="text-lg" href=" https://www.republica.com/2019/05/20/toxinas-ambientales-fertilidad/"> Republica,</a>
+                      <a class="text-lg" href=" https://www.eltiempo.com/salud/toxinas-ambientales-podrian-alterar-fertilidad-de-generaciones-futuras-364064"> El Tiempo,</a>
+                      <a class="text-lg" href=" https://www.lapatilla.com/2019/05/19/coge-dato-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> La Patilla,</a>
+                      <a class="text-lg" href=" https://www.elsiglodetorreon.com.mx/noticia/1578247.toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> El Siglo,</a>
+                      <a class="text-lg" href=" https://www.eluniversal.com.mx/ciencia-y-salud/salud/toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras"> El Universal,</a>
+                      <a class="text-lg" href=" https://www.diariodenavarra.es/noticias/vivir/2019/05/20/toxinas-ambientales-amenazan-generaciones-futuras-651774-3190.html"> Diario de Navarra,</a>
+                      <a class="text-lg" href=" https://listindiario.com/tecnologia/2019/05/20/566258/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras"> Listin Diario,</a>
+                      <a class="text-lg" href=" https://elveedordigital.com/aseguran-las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> El vector digital,</a>
+                      <a class="text-lg" href=" https://www.ultimahora.com/la-contaminacion-puede-alterar-la-fertilidad-generaciones-futuras-n2820398.html"> Ultima Hora,</a>
+                      <a class="text-lg" href=" http//z101digital.com/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> Digital,</a>
+                      <a class="text-lg" href=" https://www.telemundo.com/node/3252932"> Telemundo,</a>
+                      <a class="text-lg" href=" https//elveedordigital.com/aseguran-las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> El vector digital,</a>
+                      <a class="text-lg" href=" https//www.ultimahora.com/la-contaminacion-puede-alterar-la-fertilidad-generaciones-futuras-n2820398.html"> Ultima Hora,</a>
+                      <a class="text-lg" href=" http//z101digital.com/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> Digital,</a>
+                      <a class="text-lg" href=" https//www.telemundo.com/node/3252932"> Telemundo</a>
+              </p>
 
- <p align="justify">
+      <section id="section7"></section>
+          <div class="text-2xl w-full font-bold mb-0 mt-10">Master's Student Supervision   </div>
+          <div class="divider my-0"></div>
 
-<a class="text-lg" href=" https://www.letemps.ch/sciences/infertilite-pesticides-mis-cause"> Le Temps,</a>
-<a class="text-lg" href=" https://www.lavanguardia.com/vida/20190520/462341188690/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> La Vanguardia,</a>
-<a class="text-lg" href=" https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/"> Daily science,</a>
-<a class="text-lg" href="https://www.lecho.be/economie-politique/belgique/general/les-polluants-chimiques-perturbent-plusieurs-generations/10128766.html"> L’echo,</a>
-<a class="text-lg" href=" https://www.eurekalert.org/news-releases/606628"> AAAS EurekAlert,</a>
-<a class="text-lg" href="https://www.yourhormones.info/news/item/13365/max-perutz-science-writing-award-winner-announced"> Yourhormones,</a>
-<a class="text-lg" href="https://www.newswise.com/articles/endocrine-disruptors-alter-female-reproduction-throughout-multiple-generations"> Newswise,</a>
-<a class="text-lg" href=" https://www.cambialaterra.it/2019/03/interferenti-endocrini-i-danni-si-trasmettono-per-4-generazioni/"> Cambia La Terra,</a>
-<a class="text-lg" href=" https://inews.co.uk/news/health/why-exposure-to-everyday-chemicals-could-reduce-your-grandchildrens-fertility-272897"> iNews,</a>
-<a class="text-lg" href="https://medicalxpress.com/news/2019-03-endocrine-disruptors-female-reproduction-multiple.html"> MedicalExpress,</a>
-<a class="text-lg" href=" https://notiziescientifiche.it/sostanze-tossiche-immesse-nellambiente-danneggiano-sistema-endocrino-e-fertilita/"> Notizie scientifiche,</a>
-<a class="text-lg" href="https://www.infosalus.com/salud-investigacion/noticia-contaminacion-pueden-perjudicar-fertilidad-generaciones-futuras-20190520075734.html"> Infosalus,</a>
-<a class="text-lg" href=" https://www.business-standard.com/article/pti-stories/environmental-toxins-may-impair-fertility-of-future-generations-study-119052000276_1.html"> Business Standard,</a>
-<a class="text-lg" href=" https://fit.thequint.com/health-news/environmental-pollutants-affect-fertility-in-future-generations-study"> Fit the quint,</a>
-<a class="text-lg" href=" https://www.sciencemediacentre.org/expert-reaction-to-conference-abstract-unpublished-work-on-environmental-toxins-and-fertility-of-future-generations/"> Science Media Center,</a>
-<a class="text-lg" href=" https://afaae.com/africa/how-do-environmental-toxins-affect-sexual-development-and-fertility/"> Afaae,</a>
-<a class="text-lg" href=" https://www.republica.com/2019/05/20/toxinas-ambientales-fertilidad/"> Republica,</a>
-<a class="text-lg" href=" https://www.eltiempo.com/salud/toxinas-ambientales-podrian-alterar-fertilidad-de-generaciones-futuras-364064"> El Tiempo,</a>
-<a class="text-lg" href=" https://www.lapatilla.com/2019/05/19/coge-dato-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> La Patilla,</a>
-<a class="text-lg" href=" https://www.elsiglodetorreon.com.mx/noticia/1578247.toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> El Siglo,</a>
-<a class="text-lg" href=" https://www.eluniversal.com.mx/ciencia-y-salud/salud/toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras"> El Universal,</a>
-<a class="text-lg" href=" https://www.diariodenavarra.es/noticias/vivir/2019/05/20/toxinas-ambientales-amenazan-generaciones-futuras-651774-3190.html"> Diario de Navarra,</a>
-<a class="text-lg" href=" https://listindiario.com/tecnologia/2019/05/20/566258/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras"> Listin Diario,</a>
-<a class="text-lg" href=" https://elveedordigital.com/aseguran-las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> El vector digital,</a>
-<a class="text-lg" href=" https://www.ultimahora.com/la-contaminacion-puede-alterar-la-fertilidad-generaciones-futuras-n2820398.html"> Ultima Hora,</a>
-<a class="text-lg" href=" http//z101digital.com/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> Digital,</a>
-<a class="text-lg" href=" https://www.telemundo.com/node/3252932"> Telemundo,</a>
-<a class="text-lg" href=" https//elveedordigital.com/aseguran-las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> El vector digital,</a>
-<a class="text-lg" href=" https//www.ultimahora.com/la-contaminacion-puede-alterar-la-fertilidad-generaciones-futuras-n2820398.html"> Ultima Hora,</a>
-<a class="text-lg" href=" http//z101digital.com/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> Digital,</a>
-<a class="text-lg" href=" https//www.telemundo.com/node/3252932"> Telemundo</a>
-</p>
-
-<section id="section7"></section>
-<div class="text-2xl w-full font-bold mb-0 mt-10">Master's Student Supervision   </div>
-<div class="divider my-0"></div>
-
-      <ul class="list-disc mx-6 mb-10 grid gap-2">
-                          <li><a >Marzia Campanile <i>(role as "co-supervisor")</i>. <b>Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice </b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
-                          <li><a >Virginia Delli <i>(role as "co-supervisor")</i>. <b> Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition</b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
-                          <li><a >Eva Luz Lachat <i>(role as "expert")</i>. <b> Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature</b> (2023). University of Lausanne, Switzerland </a> </li>
-                          <li><a >Anna Dreier <i>(role as "expert")</i>. <b>  Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption </b> (2023). University of Lausanne, Switzerland </a> </li>
+            <ul class="list-disc mx-6 mb-10 grid gap-2">
+                <li><a>Marzia Campanile <i>(role as "co-supervisor")</i>. <b>Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice </b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
+                <li><a>Virginia Delli <i>(role as "co-supervisor")</i>. <b> Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition</b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
+                <li><a>Eva Luz Lachat <i>(role as "expert")</i>. <b> Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature</b> (2023). University of Lausanne, Switzerland </a> </li>
+                <li><a>Anna Dreier <i>(role as "expert")</i>. <b>  Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption </b> (2023). University of Lausanne, Switzerland </a> </li>
                         </ul>
-       
-
 
 </BaseLayout>
