--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
-<style>
+<!--  > <style>
   html {
    scroll-behavior: smooth;
        }
@@ -21,7 +21,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  });
 </script>
 
-
+-->
 
 <BaseLayout title = "Publications - David Lopez Rodriguez">
 
@@ -161,7 +161,41 @@ import HorizontalCard from "../components/HorizontalCard.astro";
                 <img src="/Press.png" alt="DailyScience" width="1200" height="1000"> </img>
               </a>
           </div>
-        
+          <div class="text-lg">
+            <p align="justify">
+                        <a class="text-lg" href="https://www.letemps.ch/sciences/infertilite-pesticides-mis-cause"> Le Temps,</a>
+                        <a class="text-lg" href="https://www.lavanguardia.com/vida/20190520/462341188690/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> La Vanguardia,</a>
+                        <a class="text-lg" href="https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/"> Daily science,</a>
+                        <a class="text-lg" href="https://www.lecho.be/economie-politique/belgique/general/les-polluants-chimiques-perturbent-plusieurs-generations/10128766.html"> L’echo,</a>
+                        <a class="text-lg" href="https://www.eurekalert.org/news-releases/606628"> AAAS EurekAlert,</a>
+                        <a class="text-lg" href="https://www.yourhormones.info/news/item/13365/max-perutz-science-writing-award-winner-announced"> Yourhormones,</a>
+                        <a class="text-lg" href="https://www.newswise.com/articles/endocrine-disruptors-alter-female-reproduction-throughout-multiple-generations"> Newswise,</a>
+                        <a class="text-lg" href="https://www.cambialaterra.it/2019/03/interferenti-endocrini-i-danni-si-trasmettono-per-4-generazioni/"> Cambia La Terra,</a>
+                        <a class="text-lg" href="https://inews.co.uk/news/health/why-exposure-to-everyday-chemicals-could-reduce-your-grandchildrens-fertility-272897"> iNews,</a>
+                        <a class="text-lg" href="https://medicalxpress.com/news/2019-03-endocrine-disruptors-female-reproduction-multiple.html"> MedicalExpress,</a>
+                        <a class="text-lg" href="https://notiziescientifiche.it/sostanze-tossiche-immesse-nellambiente-danneggiano-sistema-endocrino-e-fertilita/"> Notizie scientifiche,</a>
+                        <a class="text-lg" href="https://www.infosalus.com/salud-investigacion/noticia-contaminacion-pueden-perjudicar-fertilidad-generaciones-futuras-20190520075734.html"> Infosalus,</a>
+                        <a class="text-lg" href="https://www.business-standard.com/article/pti-stories/environmental-toxins-may-impair-fertility-of-future-generations-study-119052000276_1.html"> Business Standard,</a>
+                        <a class="text-lg" href="https://fit.thequint.com/health-news/environmental-pollutants-affect-fertility-in-future-generations-study"> Fit the quint,</a>
+                        <a class="text-lg" href="https://www.sciencemediacentre.org/expert-reaction-to-conference-abstract-unpublished-work-on-environmental-toxins-and-fertility-of-future-generations/"> Science Media Center,</a>
+                        <a class="text-lg" href="https://afaae.com/africa/how-do-environmental-toxins-affect-sexual-development-and-fertility/"> Afaae,</a>
+                        <a class="text-lg" href="https://www.republica.com/2019/05/20/toxinas-ambientales-fertilidad/"> Republica,</a>
+                        <a class="text-lg" href="https://www.eltiempo.com/salud/toxinas-ambientales-podrian-alterar-fertilidad-de-generaciones-futuras-364064"> El Tiempo,</a>
+                        <a class="text-lg" href="https://www.lapatilla.com/2019/05/19/coge-dato-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> La Patilla,</a>
+                        <a class="text-lg" href="https://www.elsiglodetorreon.com.mx/noticia/1578247.toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> El Siglo,</a>
+                        <a class="text-lg" href="https://www.eluniversal.com.mx/ciencia-y-salud/salud/toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras"> El Universal,</a>
+                        <a class="text-lg" href="https://www.diariodenavarra.es/noticias/vivir/2019/05/20/toxinas-ambientales-amenazan-generaciones-futuras-651774-3190.html"> Diario de Navarra,</a>
+                        <a class="text-lg" href="https://listindiario.com/tecnologia/2019/05/20/566258/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras"> Listin Diario,</a>
+                        <a class="text-lg" href="https://elveedordigital.com/aseguran-las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> El vector digital,</a>
+                        <a class="text-lg" href="https://www.ultimahora.com/la-contaminacion-puede-alterar-la-fertilidad-generaciones-futuras-n2820398.html"> Ultima Hora,</a>
+                        <a class="text-lg" href="http//z101digital.com/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> Digital,</a>
+                        <a class="text-lg" href="https://www.telemundo.com/node/3252932"> Telemundo,</a>
+                        <a class="text-lg" href="https//elveedordigital.com/aseguran-las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> El vector digital,</a>
+                        <a class="text-lg" href="https//www.ultimahora.com/la-contaminacion-puede-alterar-la-fertilidad-generaciones-futuras-n2820398.html"> Ultima Hora,</a>
+                        <a class="text-lg" href="http//z101digital.com/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> Digital,</a>
+                        <a class="text-lg" href="https//www.telemundo.com/node/3252932"> Telemundo</a>
+                </p>
+            </div>
 
       <section id="section7"></section>
           <div class="text-2xl w-full font-bold mb-0 mt-10">Master's Student Supervision   </div>
