--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -202,10 +202,10 @@ import HorizontalCard from "../components/HorizontalCard.astro";
           <div class="divider my-0"></div>
 
             <ul class="list-disc mx-6 mb-10 grid gap-2">
-                <li><a>Marzia Campanile <i>(role as "co-supervisor")</i>. <b>Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice </b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
-                <li><a>Virginia Delli <i>(role as "co-supervisor")</i>. <b> Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition</b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </li>
-                <li><a>Eva Luz Lachat <i>(role as "expert")</i>. <b> Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature</b> (2023). University of Lausanne, Switzerland </a> </li>
-                <li><a>Anna Dreier <i>(role as "expert")</i>. <b>  Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption </b> (2023). University of Lausanne, Switzerland </a> </li>
+                <li><p align="justify"><a>Marzia Campanile <i>(role as "co-supervisor")</i>. <b>Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice </b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
+                <li><p align="justify"><a>Virginia Delli <i>(role as "co-supervisor")</i>. <b> Effects of a perinatal exposure to the flame retardant compound BDE-47 on neurogenesis and cognition</b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
+                <li><p align="justify"><a>Eva Luz Lachat <i>(role as "expert")</i>. <b> Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature</b> (2023). University of Lausanne, Switzerland</a> </p></li>
+                <li><p align="justify"><a>Anna Dreier <i>(role as "expert")</i>. <b>  Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption </b> (2023). University of Lausanne, Switzerland </a> </p></li>
                         </ul>
 
 </BaseLayout>
