--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -49,7 +49,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
     <section id="section1"></section>
-    <div> <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> </div>
+      <div> 
+        <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> 
+      </div>
   
       <div class="divider my-0"></div>
           <p align="justify">
